<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView
	style="@style/texto1"  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/hello"
    />
<TextView  
	style="@style/texto1"  
	android:id="@+id/ipAddress"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    />
<TextView  
	style="@style/texto1"  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/porta"
    />    
<EditText  
	android:id="@+id/porta"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/defaultPort"
    android:inputType="number"/>

<TextView  
	style="@style/texto1"  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/path"
    />     
<EditText  
	android:id="@+id/sharedFolder"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/defaultPath"
    />     
<Button
	android:id="@+id/btnStart"
	android:text="@string/startService"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
	android:onClick="start"
	android:enabled="false"
/>

</LinearLayout>
